# proiect_editor_imagini

./: .gitignore  CMakeLists.txt  readme.txt
image_editor/: CMakeLists.txt
image_editor/src/: clayer.cpp  clayer.h  main.cpp  utils.h  widgetmaingraphics.cpp  widgetmaingraphics.h  widgetmainwindow.cpp  widgetmainwindow.h  widgetmainwindow.ui
image_editor/ui/: untitled.ui  widgetlayer.ui  widgetmainwindow.qrc
